# fasoshield

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: android.yml  ci.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/bf/fasoshield/agent/: FasoShieldApp.kt  ServiceLocator.kt
android/app/src/main/java/bf/fasoshield/agent/data/: AgentDatabase.kt  AgentRepository.kt  Daos.kt  Entities.kt  SignatureStore.kt
android/app/src/main/java/bf/fasoshield/agent/network/: Api.kt  ApiClient.kt
android/app/src/main/java/bf/fasoshield/agent/scan/: AppScanner.kt  Heuristics.kt  Models.kt
android/app/src/main/java/bf/fasoshield/agent/ui/: MainActivity.kt  ScanViewModel.kt
android/app/src/main/java/bf/fasoshield/agent/util/: Prefs.kt
android/app/src/main/java/bf/fasoshield/agent/work/: Alerts.kt  BootReceiver.kt  PackageEventReceiver.kt  ScanWorker.kt
android/app/src/main/res/drawable/: ic_shield.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/bf/fasoshield/agent/: HeuristicsTest.kt  ScoringTest.kt
docs/: ROADMAP.md
signatures/: README.md
signatures/hashes/: blocklist.seed.csv  official_apps.seed.csv
signatures/yara/: android_dropper.yar  android_overlay_trojan.yar  android_smishing_fr.yar  android_sms_stealer.yar  eicar_test.yar
src/fasoshield/: cli.py  config.py
src/fasoshield/api/: deps.py  main.py  schemas.py  stats.py
src/fasoshield/api/routes/: console.py  health.py  reputation.py  scan.py  signatures.py  telemetry.py
src/fasoshield/api/templates/: console.html
src/fasoshield/db/: models.py  session.py
src/fasoshield/engine/: hashdb.py  heuristics.py  models.py  scanner.py  static_apk.py  yara_scanner.py
tests/: conftest.py  test_api.py  test_hashdb.py  test_heuristics.py  test_scanner.py  test_stats.py  test_yara.py
